# 2dto3d

./: Plan3D_Wall_First_CAD_Blueprint.md  README.md  _analyze_component_mask.py  _run_debug_178.py  _run_full_new.py  _test_img3.py  api.py  install.sh  methodlogy.md  pyproject.toml  running.py  test_api.py  test_img3_new.py
.qwen/: settings.json  settings.json.orig
.qwen/skills/auto-skill-wall-first-cad-pipeline/: SKILL.md
docs/: CUBICASA.md  INSTALLATION.md  OVERVIEW.md  README.md  USAGE.md  VPS_OPENINGS.md
output/20260621_142844/: graph.json
output/20260622_074408/: graph.json
output/legacy/: graph_image-4.json
sample/episodes/episode-0/json/: result-1.json  result-2.json  result-3.json  result-4.json  result-5.json  result-6.json  result-7.json  walls_contour.json  walls_hough.json
sample/episodes/episode-1/json/: r2-1.json  r2-2.json  r2-3.json  r2-4.json  r2-5.json  r2-6.json  r2-7.json  walls_v2.json
sample/episodes/episode-2/json/: r3-1.json  r3-3.json  r3-4.json  r3-5.json  r3-6.json  r3-7.json  walls_v3.json
sample/episodes/episode-3/json/: r4-1.json  r4-2.json  r4-3.json  r4-4.json  r4-5.json  walls_v4.json
sample/episodes/episode-4/json/: r5-1.json  r5-2.json  r5-4.json  walls_v5.json
tests/: __init__.py  conftest.py  debug_img6.py  generate_test_image.py  profile_img6.py  test_builder.py  test_models.py  test_utils.py  test_validator.py
viewer/: graph.json  index.html
wallgraph/: __init__.py  builder.py  cli.py  constants.py  detector.py  mask_to_shape.py  models.py  opening_detector.py  utils.py  validator.py  visualizer.py
(+2 files in other folders)
