[project]
name = "3dfloorplan"
version = "0.1.0"
description = "Wall-first CAD floorplan reconstruction engine"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "shapely>=2.0",
    "networkx>=3.2",
    "pydantic>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
wallgraph = "wallgraph.cli:main"
plan3d-api = "api:main"

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
